Popup: don't close when releasing a drag outside of the popup

If a release mouse/touch event happens outside of the popup (or its
parent), and the close policy is CloseOnReleaseOutside(Parent), the
popup will be closed regardless of the where the mousepress event
happened. The user expect to close the popup if and only if the press is
also follows the same policy (outside of the popup or its parent
depending on the flag).

New test cases added to verify it as well.

Fixes: QTBUG-67512
Change-Id: I034bfb6b39dd5d6370b97b4833ffb91751c13ed2
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit 89b8beecedb2d05ff987a188342bcce9676f3736)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>