tests/auto/quickcontrols2/qquickpopup/data/window.qml
@@ -58,7 +58,9 @@ Window {
 
     property alias popup: popup
     property alias popup2: popup2
+    property alias popup3: popup3
     property alias button: button
+    property alias slider: slider
 
     Button {
         id: button
@@ -78,6 +80,15 @@ Window {
                     anchors.fill: parent
                     onClicked: popup.close()
                 }
+            }
+        }
+
+        Popup {
+            id: popup3
+            y: parent.height
+
+            Slider {
+                id: slider
             }
         }
     }
